syntax = "proto3";

package user;

message User {
  string username = 1;
  string email = 2;
  string password = 3;
  string id = 4;
}
message Status {
  int32 code = 1;
  string message = 2;
  bool failed = 3;
}
message Token {
  string token = 1;
  Status status = 2;
}
message emptyResponse {
  User user = 1;
  Status status = 2;
}

message FindOneRequest {
  string query = 1;
}

message FindOneResponse {
  User user = 1;
  Status status = 2;
}

message FindRequest {
  string query = 1;
}

message FindResponse {
  repeated User users = 1;
  Status status = 2;
}

message FindByIdRequest {
  string id = 1;
}

message FindByIdResponse {
  User user = 1;
  Status status = 2;
}

message FindRegexpRequest {
  string key = 1;
  string value = 2;
}

message FindRegexpResponse {
  repeated User users = 1;
  Status status = 2;
}

service UsersService {
  rpc register (User) returns (emptyResponse);
  rpc login (User) returns (Token);
  rpc findOne (FindOneRequest) returns (FindOneResponse);
  rpc find (FindRequest) returns (FindResponse);
  rpc findById (FindByIdRequest) returns (FindByIdResponse);
  rpc findRegexp (FindRegexpRequest) returns (FindRegexpResponse);
}